Added preauth API endpoint
