# lib/api/auth.js
@@ -9,6 +9,96 @@ const { nextPageCursorSchema, previousPageCursorSchema, pageNrSchema, sessSchema
 
 module.exports = (db, server, userHandler) => {
     server.post(
+        '/preauth',
+        tools.asyncifyJson(async (req, res, next) => {
+            res.charSet('utf-8');
+
+            const schema = Joi.object().keys({
+                username: Joi.alternatives()
+                    .try(
+                        Joi.string()
+                            .lowercase()
+                            .regex(/^[a-z0-9][a-z0-9.]+[a-z0-9]$/, 'username')
+                            .min(3)
+                            .max(30),
+                        Joi.string().email({ tlds: false })
+                    )
+                    .required(),
+
+                scope: Joi.string().default('master'),
+
+                sess: sessSchema,
+                ip: sessIPSchema
+            });
+
+            const result = schema.validate(req.params, {
+                abortEarly: false,
+                convert: true
+            });
+
+            if (result.error) {
+                res.status(400);
+                res.json({
+                    error: result.error.message,
+                    code: 'InputValidationError',
+                    details: tools.validationErrors(result)
+                });
+                return next();
+            }
+
+            let permission = roles.can(req.role).createAny('authentication');
+
+            // permissions check
+            req.validate(permission);
+
+            // filter out unallowed fields
+            result.value = permission.filter(result.value);
+
+            let authData, user;
+
+            try {
+                [authData, user] = await userHandler.preAuth(result.value.username, result.value.scope);
+            } catch (err) {
+                let response = {
+                    error: err.message,
+                    code: err.code || 'AuthFailed'
+                };
+                if (user) {
+                    response.id = user.toString();
+                }
+                res.status(403);
+                res.json(response);
+                return next();
+            }
+
+            if (!authData) {
+                let response = {
+                    error: 'Authentication failed',
+                    code: 'AuthFailed'
+                };
+                if (user) {
+                    response.id = user.toString();
+                }
+                res.status(403);
+                res.json(response);
+                return next();
+            }
+
+            let preAuthResponse = {
+                success: true,
+                id: authData.user.toString(),
+                username: authData.username,
+                scope: authData.scope,
+                require2fa: authData.require2fa
+            };
+
+            res.status(200);
+            res.json(permission.filter(preAuthResponse));
+            return next();
+        })
+    );
+
+    server.post(
         '/authenticate',
         tools.asyncifyJson(async (req, res, next) => {
             res.charSet('utf-8');
@@ -80,11 +170,13 @@ module.exports = (db, server, userHandler) => {
             } catch (err) {
                 let response = {
                     error: err.message,
-                    code: 'AuthFailed' || err.code
+                    code: err.code || 'AuthFailed'
                 };
+
                 if (user) {
                     response.id = user.toString();
                 }
+
                 res.status(403);
                 res.json(response);
                 return next();
