# lib/user-handler.js
@@ -1048,6 +1048,71 @@ class UserHandler {
         }
     }
 
+    async preAuth(username, requiredScope) {
+        requiredScope = requiredScope || 'master';
+
+        username = (username || '').toString();
+
+        let userQuery;
+        try {
+            userQuery = await this.checkAddress(username);
+        } catch (err) {
+            return [false, false];
+        }
+
+        if (!userQuery) {
+            // nothing to do here
+            return [false, false];
+        }
+
+        let userData;
+        try {
+            userData = await this.users.collection('users').findOne(userQuery, {
+                projection: {
+                    _id: true,
+                    username: true,
+                    address: true,
+                    enabled2fa: true,
+                    webauthn: true,
+                    disabled: true,
+                    suspended: true,
+                    disabledScopes: true
+                },
+                maxTimeMS: consts.DB_MAX_TIME_USERS
+            });
+        } catch (err) {
+            // return as failed auth
+            return [false, false];
+        }
+
+        if (!userData || userData.disabled || userData.suspended) {
+            // return as failed auth
+            return [false, false];
+        }
+
+        let disabledScopes = userData.disabledScopes || [];
+        if (disabledScopes.includes(requiredScope)) {
+            let err = new Error('Access to requested service disabled');
+            err.response = 'NO';
+            err.responseCode = 403;
+            err.code = 'InvalidAuthScope';
+            err.user = userData._id;
+            throw err;
+        }
+
+        let enabled2fa = tools.getEnabled2fa(userData.enabled2fa);
+
+        let authResponse = {
+            user: userData._id,
+            username: userData.username,
+            scope: requiredScope,
+            // if 2FA is enabled then require token validation
+            require2fa: requiredScope === 'master' && enabled2fa.length ? enabled2fa : false
+        };
+
+        return [authResponse, userData._id];
+    }
+
     async generateASP(user, data) {
         let password =
             data.password ||
@@ -2646,7 +2711,7 @@ class UserHandler {
             .filter(credentialData => credentialData.authenticatorAttachment === data.authenticatorAttachment)
             .map(credentialData => ({
                 rawId: credentialData.rawId.toString('hex'),
-                type: credentialData.type,
+                type: credentialData.type
             }));
 
         // store chalenge
